try HTML 5 validator

--- a/index.html
+++ b/index.html
@@ -451,6 +451,9 @@
                                         Close Project
                                     </button>
                                 </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
