index-fr for translation

--- a/index-fr.html
+++ b/index-fr.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="Come to our studios to work on a project that you want to realize" />
+        <meta name="description" content="Rejoignez notre studio et intégrez une équipe de passionné" />
         <meta name="author" content="" />
         <title>PixelForge Studios</title>
         <!-- Favicon-->
@@ -29,8 +29,8 @@
                     <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
                         <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
                         <li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#team">Team</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#about">A propos</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#team">Equipe</a></li>
                         <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
                     </ul>
                 </div>
@@ -39,9 +39,9 @@
         <!-- Masthead-->
         <header class="masthead">
             <div class="container">
-                <div class="masthead-subheading">Welcome To Our Studio!</div>
-                <div class="masthead-heading text-uppercase">It's Nice To Meet You</div>
-                <a class="btn btn-primary btn-xl text-uppercase" href="#services">Tell Me More</a>
+                <div class="masthead-subheading">Bienvenue dans notre studio!</div>
+                <div class="masthead-heading text-uppercase">C'est bon de vous rencontrer</div>
+                <a class="btn btn-primary btn-xl text-uppercase" href="#services">Dîtes m'en plus !</a>
             </div>
         </header>
         <!-- Services-->
@@ -49,7 +49,7 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Services</h2>
-                    <h3 class="section-subheading text-muted">What we provide ? </h3>
+                    <h3 class="section-subheading text-muted">Ce que nous fournissons ? </h3>
                 </div>
                 <div class="row text-center">
                     <div class="col-md-4">
@@ -58,23 +58,23 @@
                             <i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">E-Commerce</h4>
-                        <p class="text-muted">We provide a e-commerce platform which contains our products and creations</p>
+                        <p class="text-muted">Nous fournissons un site e-commerce proposant nos produits et créations</p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
                             <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
                         </span>
-                        <h4 class="my-3">Responsive Design</h4>
-                        <p class="text-muted">Our team has knowledge to build products which can adapt on several platforms.</p>
+                        <h4 class="my-3">Conception crossplatform</h4>
+                        <p class="text-muted">Notre team possède les connaissances pour vour fournir des produits utilisables sur chaque plateformes selon vos besoins</p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
                             <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
                         </span>
-                        <h4 class="my-3">Security</h4>
-                        <p class="text-muted">Security is an important step to build efficient video game. We have security expert in out team to provide safe products.</p>
+                        <h4 class="my-3">Sécurité</h4>
+                        <p class="text-muted">La sécurité est un point important de la production de nos créations. Nous avons ds experts de la sécurité au sein de notre équipe pour répondre à ce besoin.</p>
                     </div>
                 </div>
             </div>
@@ -84,7 +84,7 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Portfolio</h2>
-                    <h3 class="section-subheading text-muted">Some of our product</h3>
+                    <h3 class="section-subheading text-muted">Quelques uns de nos produits</h3>
                 </div>
                 <div class="row">
                     <div class="col-lg-4 col-sm-6 mb-4">
@@ -184,8 +184,8 @@
         <section class="page-section" id="about">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">About</h2>
-                    <h3 class="section-subheading text-muted">find out more.</h3>
+                    <h2 class="section-heading text-uppercase">A propos</h2>
+                    <h3 class="section-subheading text-muted">En savoir plus.</h3>
                 </div>
                 <ul class="timeline">
                     <li>
@@ -193,9 +193,9 @@
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4>2009-2011</h4>
-                                <h4 class="subheading">Our Humble Beginnings</h4>
+                                <h4 class="subheading">Nos humble début</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">We start with a passionate team with common interest : provide quality and fun.</p></div>
+                            <div class="timeline-body"><p class="text-muted">Nous avons commencé avec une équipe de passioné avec des intérêts commun : qualité et fun</p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
@@ -203,9 +203,9 @@
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4>March 2011</h4>
-                                <h4 class="subheading">An Agency is Born</h4>
+                                <h4 class="subheading">Une agence est née</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">After some project a new firm is born !</p></div>
+                            <div class="timeline-body"><p class="text-muted">Après quelques projet, c'est une entreprise qui naît</p></div>
                         </div>
                     </li>
                     <li>
@@ -213,9 +213,9 @@
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4>December 2015</h4>
-                                <h4 class="subheading">Transition to Full Service</h4>
+                                <h4 class="subheading">Transition vers le multi-service</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">victim of our success, we're growing</p></div>
+                            <div class="timeline-body"><p class="text-muted">Victime de notre succès nous grandissons</p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
@@ -223,19 +223,19 @@
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4>July 2020</h4>
-                                <h4 class="subheading">Phase Two Expansion</h4>
+                                <h4 class="subheading">Phase 2 Expansion</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">recruiting, training and expanding our target customer base</p></div>
+                            <div class="timeline-body"><p class="text-muted">Recrutement, formation et croissement de notre clientèle cible.</p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
                         <div class="timeline-image">
                             <h4>
-                                Be Part
+                                Participer
                                 <br />
-                                Of Our
+                                A notre
                                 <br />
-                                Story!
+                                Histoire!
                             </h4>
                         </div>
                     </li>
@@ -246,8 +246,8 @@
         <section class="page-section bg-light" id="team">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Our Amazing Team</h2>
-                    <h3 class="section-subheading text-muted">To build amazing products you just need the better team.</h3>
+                    <h2 class="section-heading text-uppercase">Notre incroyable équipe</h2>
+                    <h3 class="section-subheading text-muted">Pour créer de superbe produit, vous avez juste besoin de la meilleure équipe.</h3>
                 </div>
                 <div class="row">
                     <div class="col-lg-3">
@@ -319,8 +319,8 @@
         <section class="page-section" id="contact">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Contact Us</h2>
-                    <h3 class="section-subheading text-muted">Our work interest you ? Do not hesitate to conatct us !</h3>
+                    <h2 class="section-heading text-uppercase">Nous contacter</h2>
+                    <h3 class="section-subheading text-muted">Notre travail vous intéresse ? N'hésitez pas à nous contacter !</h3>
                 </div>
                 <!-- * * * * * * * * * * * * * * *-->
                 <!-- * * SB Forms Contact Form * *-->
@@ -335,25 +335,25 @@
                             <div class="form-group">
                                 <!-- Name input-->
                                 <input class="form-control" id="name" type="text" placeholder="Your Name *" data-sb-validations="required" />
-                                <div class="invalid-feedback" data-sb-feedback="name:required">A name is required.</div>
+                                <div class="invalid-feedback" data-sb-feedback="name:required">Un nom ets requis</div>
                             </div>
                             <div class="form-group">
                                 <!-- Email address input-->
                                 <input class="form-control" id="email" type="email" placeholder="Your Email *" data-sb-validations="required,email" />
-                                <div class="invalid-feedback" data-sb-feedback="email:required">An email is required.</div>
-                                <div class="invalid-feedback" data-sb-feedback="email:email">Email is not valid.</div>
+                                <div class="invalid-feedback" data-sb-feedback="email:required">Un email est requis.</div>
+                                <div class="invalid-feedback" data-sb-feedback="email:email">Email n'est pas valide.</div>
                             </div>
                             <div class="form-group mb-md-0">
                                 <!-- Phone number input-->
                                 <input class="form-control" id="phone" type="tel" placeholder="Your Phone *" data-sb-validations="required" />
-                                <div class="invalid-feedback" data-sb-feedback="phone:required">A phone number is required.</div>
+                                <div class="invalid-feedback" data-sb-feedback="phone:required">Un numéro de téléphone est requis.</div>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="form-group form-group-textarea mb-md-0">
                                 <!-- Message input-->
                                 <textarea class="form-control" id="message" placeholder="Your Message *" data-sb-validations="required"></textarea>
-                                <div class="invalid-feedback" data-sb-feedback="message:required">A message is required.</div>
+                                <div class="invalid-feedback" data-sb-feedback="message:required">Un message est requis.</div>
                             </div>
                         </div>
                     </div>
@@ -363,8 +363,8 @@
                     <!-- has successfully submitted-->
                     <div class="d-none" id="submitSuccessMessage">
                         <div class="text-center text-white mb-3">
-                            <div class="fw-bolder">Form submission successful!</div>
-                            To activate this form, sign up at
+                            <div class="fw-bolder">Formulaire envoyé avec succès!</div>
+                            Pour activer ce formulaire, inscrivez-vous sur <br />
                             <br />
                             <a href="https://startbootstrap.com/solution/contact-forms">https://startbootstrap.com/solution/contact-forms</a>
                         </div>
@@ -373,9 +373,9 @@
                     <!---->
                     <!-- This is what your users will see when there is-->
                     <!-- an error submitting the form-->
-                    <div class="d-none" id="submitErrorMessage"><div class="text-center text-danger mb-3">Error sending message!</div></div>
+                    <div class="d-none" id="submitErrorMessage"><div class="text-center text-danger mb-3">Erreur d'envoi du message</div></div>
                     <!-- Submit Button-->
-                    <div class="text-center"><button class="btn btn-primary btn-xl text-uppercase disabled" id="submitButton" type="submit">Send Message</button></div>
+                    <div class="text-center"><button class="btn btn-primary btn-xl text-uppercase disabled" id="submitButton" type="submit">Envoyé</button></div>
                 </form>
             </div>
         </section>
@@ -390,8 +390,8 @@
                         <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
                     </div>
                     <div class="col-lg-4 text-lg-end">
-                        <a class="link-dark text-decoration-none me-3" href="#!">Privacy Policy</a>
-                        <a class="link-dark text-decoration-none" href="#!">Terms of Use</a>
+                        <a class="link-dark text-decoration-none me-3" href="#!">Notre politique</a>
+                        <a class="link-dark text-decoration-none" href="#!">Conditions d'utilisation</a>
                     </div>
                 </div>
             </div>
