--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
             <div class="container">
                 <a class="navbar-brand" href="#page-top"><img src="assets/images/img/logos/logo-navbar-brand.png" style="height: 60px;" alt="logo navbar" /></a>
+                <a href="./index-fr.html">
+                  <img src="assets/images/img/logos/french-flag.png" style="width: 60px;">
+                </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars ms-1"></i>
