--- a/index.html
+++ b/index.html
@@ -97,11 +97,11 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/images/img/portfolio/1.jpg" alt="..." />
+                                <img class="img-fluid" src="assets/images/img/portfolio/hogwarts-legacy.jpg" style="width: 500px;" alt="hogwarts legacy image" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Threads</div>
-                                <div class="portfolio-caption-subheading text-muted">Illustration</div>
+                                <div class="portfolio-caption-heading">Hogwarts legacy</div>
+                                <div class="portfolio-caption-subheading text-muted">RPG - Open world</div>
                             </div>
                         </div>
                     </div>
@@ -403,28 +403,45 @@
         <!-- Portfolio item 1 modal popup-->
         <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
             <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="close-modal" data-bs-dismiss="modal"><img src="assets/images/img/close-icon.svg" alt="Close modal" /></div>
+                <div class="modal-content" style="background-image: url(./assets/images/img/portfolio/poudlard-background-modal.jpg); background-size: cover; background-position: center;">
                     <div class="container">
                         <div class="row justify-content-center">
-                            <div class="col-lg-8">
+                            <div class="col-lg-12">
                                 <div class="modal-body">
                                     <!-- Project details-->
-                                    <h2 class="text-uppercase">Project Name</h2>
-                                    <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                                    <img class="img-fluid d-block mx-auto" src="assets/images/img/portfolio/1.jpg" alt="..." />
-                                    <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
-                                    <ul class="list-inline">
-                                        <li>
-                                            <strong>Client:</strong>
-                                            Threads
-                                        </li>
-                                        <li>
-                                            <strong>Category:</strong>
-                                            Illustration
-                                        </li>
-                                    </ul>
-                                    <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
+                                    <div class='d-flex justify-content-around'>
+                                      <div class='row'>
+                                        <div class='col-md-6'>
+                                          <h3 class="text-uppercase text-white">Hogwarts legacy</h3>
+                                          <p class="item-intro text-muted">RPG - Open world</p>
+                                          <div class='carousel slide' id="carousel-hogwarts" data-bs-ride="carousel">
+                                            <div class="carousel-inner">
+                                              <div class="carousel-item active" data-bs-interval="3000">
+                                                <img class="d-block w-100" src="assets/images/img/portfolio/hogwarts-legacy-carousel-1.jpg" alt="First slide">
+                                              </div>
+                                              <div class="carousel-item" data-bs-interval="3000">
+                                                <img class="d-block w-100" src="assets/images/img/portfolio/hogwarts-legacy-carousel-2.jpg" alt="Second slide">
+                                              </div>
+                                              <div class="carousel-item" data-bs-interval="3000">
+                                                <img class="d-block w-100" src="assets/images/img/portfolio/hogwarts-legacy-carousel-3.jpg" alt="Third slide">
+                                              </div>
+                                            </div>
+                                          </div>
+                                        </div>
+                                        <div class='col-md-6 d-flex align-items-center'>
+                                          <p class="text-white">
+                                            In collaboration with Warner Bros studios we have created one of our favorite project.<br/>
+                                            <br/>
+                                            Enter the world of Harry Potter and discover the secrets of Hogwarts.<br/>
+                                            <br/>
+                                            <span class="mb-2"><strong>Release date :</strong> 2022</span><br/>
+                                            <span style="font-size: 25px;" class="text-white mt-2">Crossplatform game</span><br/>
+                                            <strong>Platform :</strong> PC, PS4, PS5, Xbox One, Xbox Series X/S, Switch<br/>
+                                          </p>
+                                        </div>
+                                      </div>
+                                    </div>
+                                    <button class="btn btn-primary btn-xl text-uppercase" style="background-image: url(./assets/images/img/portfolio/texture-parchment.jpg); color:black;" data-bs-dismiss="modal" type="button">
                                         <i class="fas fa-xmark me-1"></i>
                                         Close Project
                                     </button>
