feat(pass check): add alt to img tag

--- a/index-fr.html
+++ b/index-fr.html
@@ -22,7 +22,7 @@
             <div class="container">
                 <a class="navbar-brand" href="#page-top"><img src="assets/images/img/logos/logo-navbar-brand.png" style="height: 60px;" alt="logo navbar" /></a>
                 <a href="./index.html">
-                  <img src="assets/images/img/logos/england-flag.png" style="width: 70px;">
+                  <img src="assets/images/img/logos/england-flag.png" style="width: 70px;" alt="england flag to change locale">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
