--- a/index-fr.html
+++ b/index-fr.html
@@ -106,19 +106,21 @@
                         </div>
                     </div>
                     <div class="col-lg-4 col-sm-6 mb-4">
-                        <!-- Portfolio item 2-->
-                        <div class="portfolio-item">
-                            <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal2">
-                                <div class="portfolio-hover">
-                                    <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
-                                </div>
-                                <img class="img-fluid" src="assets/images/img/portfolio/2.jpg" alt="..." />
-                            </a>
-                            <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Explore</div>
-                                <div class="portfolio-caption-subheading text-muted">Graphic Design</div>
-                            </div>
+                      <!-- Portfolio item 2-->
+                      <div class="portfolio-item">
+                        <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal2">
+                          <div class="portfolio-hover">
+                            <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
+                          </div>
+                          <div class="w-100 h-100 d-flex justify-content-center">
+                            <img class="img-fluid" src="assets/images/img/portfolio/image-title-simracing.jpg" alt="..." />
+                          </div>
+                        </a>
+                        <div class="portfolio-caption">
+                          <div class="portfolio-caption-heading">UltimateRace Simulation</div>
+                          <div class="portfolio-caption-subheading text-muted">SimRacing</div>
                         </div>
+                      </div>
                     </div>
                     <div class="col-lg-4 col-sm-6 mb-4">
                         <!-- Portfolio item 3-->
@@ -452,41 +454,106 @@
               </div>
           </div>
       </div>
-        <!-- Portfolio item 2 modal popup-->
-        <div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog" aria-hidden="true">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="close-modal" data-bs-dismiss="modal"><img src="assets/images/img/close-icon.svg" alt="Close modal" /></div>
-                    <div class="container">
-                        <div class="row justify-content-center">
-                            <div class="col-lg-8">
-                                <div class="modal-body">
-                                    <!-- Project details-->
-                                    <h2 class="text-uppercase">Project Name</h2>
-                                    <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                                    <img class="img-fluid d-block mx-auto" src="assets/images/img/portfolio/2.jpg" alt="..." />
-                                    <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
-                                    <ul class="list-inline">
-                                        <li>
-                                            <strong>Client:</strong>
-                                            Explore
-                                        </li>
-                                        <li>
-                                            <strong>Category:</strong>
-                                            Graphic Design
-                                        </li>
-                                    </ul>
-                                    <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
-                                        <i class="fas fa-xmark me-1"></i>
-                                        Close Project
-                                    </button>
-                                </div>
-                            </div>
+      <!-- Portfolio item 2 modal popup-->
+      <div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="close-modal" data-bs-dismiss="modal"><img src="assets/images/img/close-icon.svg" alt="Close modal" /></div>
+            <div class="container">
+              <div class="row justify-content-center">
+                <div class="col-lg-8">
+                  <div class="modal-body">
+                    <!-- Project details-->
+                    <h3 class="text-uppercase">UltimateRace Simulation</h3>
+                    <p class="item-intro text-muted">Le jeu ultime des SimRacers</p>
+                    <div id="carouselUltimateRacing" class="carousel slide" data-bs-ride="carousel">
+                      <div class="carousel-inner">
+                        <div class="carousel-item active" data-bs-interval="4000">
+                          <img src="assets/images/img/portfolio/image-acc-1.jpg" class="d-block w-100" alt="..." />
+                          <div class="carousel-caption d-none d-md-block">
+                            <h5>Voitures</h5>
+                            <p>Les voitures sont modélisées avec un grand réalisme</p>
+                          </div>
                         </div>
+                        <div class="carousel-item" data-bs-interval="4000">
+                          <img src="assets/images/img/portfolio/image-acc-2.jpg" class="d-block w-100" alt="..." />
+                          <div class="carousel-caption d-none d-md-block">
+                            <h5>La vue pilote</h5>
+                            <p>La vue pilote est la plus réaliste possible</p>
+                          </div>
+                        </div>
+                        <div class="carousel-item" data-bs-interval="4000">
+                          <img src="assets/images/img/portfolio/image-acc-3.png" class="d-block w-100" alt="..." />
+                          <div class="carousel-caption d-none d-md-block">
+                            <h5>La vue exterieur</h5>
+                            <p>La vue exterieur est d'un réalisme éblouissant</p>
+                          </div>
+                        </div>
+                        <div class="carousel-item" data-bs-interval="4000">
+                          <img src="assets/images/img/portfolio/image-acc-4.jpg" class="d-block w-100" alt="..." />
+                          <div class="carousel-caption d-none d-md-block">
+                            <h5 class="text-dark">Les circuits</h5>
+                            <p>Les circuits sont modélisés avec un grand réalisme et sont fidèles à la réalité</p>
+                          </div>
+                        </div>
+                        <div class="carousel-item" data-bs-interval="4000">
+                          <img src="assets/images/img/portfolio/image-acc-5.jpg" class="d-block w-100" alt="..." />
+                          <div class="carousel-caption d-none d-md-block">
+                            <h5>Réalisme</h5>
+                            <p>Le réalisme est le maître mot de notre jeu</p>
+                          </div>
+                        </div>
+                      </div>
+                      <button class="carousel-control-prev" type="button" data-bs-target="#carouselUltimateRacing" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                      </button>
+                      <button class="carousel-control-next" type="button" data-bs-target="#carouselUltimateRacing" data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                      </button>
                     </div>
+                    <p>UltimateRace Simulation est un jeu de simulation de course automobile. Il est développé par notre équipe de passionnés de course automobile et de jeux vidéo. Nous avons voulu créer un jeu de simulation de course automobile qui soit le plus réaliste possible. Nous avons donc modélisé les voitures et les circuits avec un grand réalisme. Nous avons également voulu que le jeu soit accessible à tous.</p>
+                    <ul class="list-group list-group-flush">
+                      <li class="list-group-item">
+                        <strong>Pour qui ?</strong>
+                        Tous les passionnés de course automobile et de jeux vidéo
+                      </li>
+                      <li class="list-group-item">
+                        <strong>Catégorie :</strong>
+                        SimRacing
+                      </li>
+                      <li class="list-group-item">
+                        <strong>Plateformes disponibles :</strong>
+                        PC (Steam), PS4/5 et XBOX
+                      </li>
+                                          <li class="list-group-item">
+                                              <strong>Langues disponibles :</strong>
+                                              Français, Anglais, Allemand, Espagnol, Italien, Portugais, Russe, Chinois, Japonais
+                                          </li>
+                                          <li class="list-group-item">
+                                              <strong>Configuration PC conseillée :</strong>
+                                              <ul class="list-inline">
+                                                  <li>OS : Windows 10 64 bits</li>
+                                                  <li>Processeur : Intel Core i5-9600K ou AMD Ryzen 5 2600X</li>
+                                                  <li>RAM : 16 Go</li>
+                                                  <li>Carte graphique : Nvidia GeForce GTX 1660 ou AMD Radeon RX 590</li>
+                                                  <li>Espace disque : 50 Go</li>
+                                                  <li>Volant et pédalier conseillé</li>
+                                              </ul>
+                                          </li>
+                    </ul>
+                    <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
+                      <i class="fas fa-xmark me-1"></i>
+                      Fermer la fenêtre
+                    </button>
+                  </div>
                 </div>
+              </div>
             </div>
+          </div>
         </div>
+      </div>
         <!-- Portfolio item 3 modal popup-->
         <div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" role="dialog" aria-hidden="true">
             <div class="modal-dialog">
