--- a/index.html
+++ b/index.html
@@ -106,19 +106,21 @@
                         </div>
                     </div>
                     <div class="col-lg-4 col-sm-6 mb-4">
-                        <!-- Portfolio item 2-->
-                        <div class="portfolio-item">
-                            <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal2">
-                                <div class="portfolio-hover">
-                                    <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
-                                </div>
-                                <img class="img-fluid" src="assets/images/img/portfolio/2.jpg" alt="..." />
-                            </a>
-                            <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Explore</div>
-                                <div class="portfolio-caption-subheading text-muted">Graphic Design</div>
-                            </div>
+                      <!-- Portfolio item 2-->
+                      <div class="portfolio-item">
+                        <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal2">
+                          <div class="portfolio-hover">
+                            <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
+                          </div>
+                          <div class="w-100 h-100 d-flex justify-content-center">
+                            <img class="img-fluid" src="assets/images/img/portfolio/image-title-simracing.jpg" alt="..." />
+                          </div>
+                        </a>
+                        <div class="portfolio-caption">
+                          <div class="portfolio-caption-heading">UltimateRace Simulation</div>
+                          <div class="portfolio-caption-subheading text-muted">SimRacing</div>
                         </div>
+                      </div>
                     </div>
                     <div class="col-lg-4 col-sm-6 mb-4">
                         <!-- Portfolio item 3-->
@@ -454,38 +456,103 @@
         </div>
         <!-- Portfolio item 2 modal popup-->
         <div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog" aria-hidden="true">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="close-modal" data-bs-dismiss="modal"><img src="assets/images/img/close-icon.svg" alt="Close modal" /></div>
-                    <div class="container">
-                        <div class="row justify-content-center">
-                            <div class="col-lg-8">
-                                <div class="modal-body">
-                                    <!-- Project details-->
-                                    <h2 class="text-uppercase">Project Name</h2>
-                                    <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                                    <img class="img-fluid d-block mx-auto" src="assets/images/img/portfolio/2.jpg" alt="..." />
-                                    <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
-                                    <ul class="list-inline">
-                                        <li>
-                                            <strong>Client:</strong>
-                                            Explore
-                                        </li>
-                                        <li>
-                                            <strong>Category:</strong>
-                                            Graphic Design
-                                        </li>
-                                    </ul>
-                                    <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
-                                        <i class="fas fa-xmark me-1"></i>
-                                        Close Project
-                                    </button>
-                                </div>
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="close-modal" data-bs-dismiss="modal"><img src="assets/images/img/close-icon.svg" alt="Close modal" /></div>
+              <div class="container">
+                <div class="row justify-content-center">
+                  <div class="col-lg-8">
+                    <div class="modal-body">
+                      <!-- Project details-->
+                      <h3 class="text-uppercase">UltimateRace Simulation</h3>
+                      <p class="item-intro text-muted">The ultimate game of SimRacers</p>
+                      <div id="carouselUltimateRacing" class="carousel slide" data-bs-ride="carousel">
+                        <div class="carousel-inner">
+                          <div class="carousel-item active" data-bs-interval="4000">
+                            <img src="assets/images/img/portfolio/image-acc-1.jpg" class="d-block w-100" alt="..." />
+                            <div class="carousel-caption d-none d-md-block">
+                              <h5>Cars</h5>
+                              <p>Cars are modeled with a great realism</p>
                             </div>
+                          </div>
+                          <div class="carousel-item" data-bs-interval="4000">
+                            <img src="assets/images/img/portfolio/image-acc-2.jpg" class="d-block w-100" alt="..." />
+                            <div class="carousel-caption d-none d-md-block">
+                                                        <h5>Cockpit view</h5>
+                                                        <p>Cockpit view is the most realistic possible</p>
+                            </div>
+                          </div>
+                          <div class="carousel-item" data-bs-interval="4000">
+                            <img src="assets/images/img/portfolio/image-acc-3.png" class="d-block w-100" alt="..." />
+                            <div class="carousel-caption d-none d-md-block">
+                                                        <h5>Exterior view</h5>
+                                                        <p>Exterior view is a stunning realism</p>
+                            </div>
+                          </div>
+                          <div class="carousel-item" data-bs-interval="4000">
+                            <img src="assets/images/img/portfolio/image-acc-4.jpg" class="d-block w-100" alt="..." />
+                            <div class="carousel-caption d-none d-md-block">
+                                                        <h5 class="text-dark">Tracks</h5>
+                                                        <p>Tracks are modeled with a great realism and are faithful to reality</p>
+                            </div>
+                          </div>
+                          <div class="carousel-item" data-bs-interval="4000">
+                            <img src="assets/images/img/portfolio/image-acc-5.jpg" class="d-block w-100" alt="..." />
+                            <div class="carousel-caption d-none d-md-block">
+                                                        <h5 class="text-dark">Tracks</h5>
+                                                        <p>Tracks are modeled with a great realism and are faithful to reality</p>
+                            </div>
+                          </div>
                         </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselUltimateRacing" data-bs-slide="prev">
+                          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                          <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselUltimateRacing" data-bs-slide="next">
+                          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                          <span class="visually-hidden">Next</span>
+                        </button>
+                      </div>
+                                        <p>UltimateRace Simulation is a car racing simulation game. It was developed by our team of racing and video game enthusiasts. We wanted to create a racing simulation game that was as realistic as possible. So we modelled the cars and circuits as realistically as possible. We also wanted the game to be accessible to everyone.</p>
+                      <ul class="list-group list-group-flush">
+                        <li class="list-group-item">
+                                                <strong>Who is it for?</strong>
+                                                For all motor racing and video game fans
+                        </li>
+                        <li class="list-group-item">
+                                                <strong>Category :</strong>
+                                                SimRacer
+                        </li>
+                        <li class="list-group-item">
+                          <strong>Available platforms :</strong>
+                          PC (Steam), PS4/5 et XBOX
+                        </li>
+                                            <li class="list-group-item">
+                                                <strong>Languages :</strong>
+                                                French, English, Deutsch, Spanish, Italian, Portuguese, Russian, Chinese, Japanese
+                                            </li>
+                        <li class="list-group-item">
+                          <strong>Recommended PC configuration :</strong>
+                          <ul class="list-inline">
+                            <li>OS : Windows 10 64 bits</li>
+                            <li>Processor : Intel Core i5-9600K ou AMD Ryzen 5 2600X</li>
+                            <li>RAM : 16 Go</li>
+                            <li>Graphic card : Nvidia GeForce GTX 1660 or AMD Radeon RX 590</li>
+                            <li>Disk space : 50 Go</li>
+                            <li>Steering wheel and pedals recommended</li>
+                          </ul>
+                        </li>
+                      </ul>
+                      <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
+                        <i class="fas fa-xmark me-1"></i>
+                        Close the window
+                      </button>
                     </div>
+                  </div>
                 </div>
+              </div>
             </div>
+          </div>
         </div>
         <!-- Portfolio item 3 modal popup-->
         <div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" role="dialog" aria-hidden="true">
