--- a/index.html
+++ b/index.html
@@ -129,11 +129,11 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/images/img/portfolio/3.jpg" alt="..." />
+                                <img class="img-fluid" src="assets/images/img/portfolio/image-csgo-1.png" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Finish</div>
-                                <div class="portfolio-caption-subheading text-muted">Identity</div>
+                                <div class="portfolio-caption-heading">Counter-Strike: Global Offensive</div>
+                                <div class="portfolio-caption-subheading text-muted">jeux vidéo de tir</div>
                             </div>
                         </div>
                     </div>
@@ -562,9 +562,9 @@
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project details-->
-                                    <h2 class="text-uppercase">Project Name</h2>
-                                    <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                                    <img class="img-fluid d-block mx-auto" src="assets/images/img/portfolio/3.jpg" alt="..." />
+                                    <h2 class="text-uppercase">Counter-Strike: Global Offensive</h2>
+                                    <p class="item-intro text-muted">jeux vidéo de tir</p>
+                                    <img class="img-fluid d-block mx-auto" src="assets/images/img/portfolio/image-csgo-3.jpeg" alt="..." />
                                     <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
                                     <ul class="list-inline">
                                         <li>
