add last description as objective and platform

--- a/index-fr.html
+++ b/index-fr.html
@@ -781,14 +781,24 @@
                                                         partie d'un camp, celui des terroristes ou celui des antiterroristes. Depuis fin 2018, le jeu est entièrement
                                                         gratuit et
                                                         inclut des achats intégrés.</p>
-                                                    <ul class="list-inline">
-                                                        <li>
-                                                            <strong>Client:</strong>
-                                                            Finish
+                                                    <ul class="list-group list-group-flush">
+                                                        <li class="list-group-item">
+                                                            <strong>Obectif :</strong>
+                                                            <ul class="list-inline">
+                                                                <li>L'objectif est d'être le dernier survivant afin de gagner seul ou de faire gagner son binôme.</li>
+                                                                </ul>
                                                         </li>
-                                                        <li>
-                                                            <strong>Category:</strong>
-                                                            Identity
+                                                        <li class="list-group-item">
+                                                            <strong>Quelles plateformes ?</strong>
+                                                            <ul class="list-inline">
+                                                                <li>PC avec Steam</li>
+                                                            </ul>
+                                                        </li>
+                                                        <li class="list-group-item">
+                                                            <strong>Si vous appréciez les jeux de tir et de stratégie ce jeux est fait pour vous !!!<br>
+                                                        
+                                                            </strong>
+                                                            <br>
                                                         </li>
                                                     </ul>
                                                 </div>
