fix(hotfix realease): modify banner master header

--- a/index-fr.html
+++ b/index-fr.html
@@ -42,9 +42,9 @@
         <!-- Masthead-->
         <header class="masthead">
             <div class="container">
-                <div class="masthead-subheading">Bienvenue dans notre studio!</div>
-                <div class="masthead-heading text-uppercase">C'est bon de vous rencontrer</div>
-                <a class="btn btn-primary btn-xl text-uppercase" href="#services">Dîtes m'en plus !</a>
+                <div class="masthead-subheading text-black" style="font-weight: bolder;">Bienvenue dans notre studio!</div>
+                <div class="masthead-heading text-uppercase text-black">C'est bon de vous rencontrer</div>
+                <a class="btn btn-primary btn-xl text-uppercase text-black" href="#services">Dîtes m'en plus !</a>
             </div>
         </header>
         <!-- Services-->
