--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
         <!-- Masthead-->
         <header class="masthead">
             <div class="container">
-                <div class="masthead-subheading">Welcome To Our Studio!</div>
-                <div class="masthead-heading text-uppercase">It's Nice To Meet You</div>
-                <a class="btn btn-primary btn-xl text-uppercase" href="#services">Tell Me More</a>
+                <div class="masthead-subheading text-black" style="font-weight: bolder;">Welcome To Our Studio!</div>
+                <div class="masthead-heading text-uppercase text-black">It's Nice To Meet You</div>
+                <a class="btn btn-primary btn-xl text-uppercase text-black" href="#services">Tell Me More</a>
             </div>
         </header>
         <!-- Services-->
