fix(orthography): fix orthography in index-fr

--- a/index-fr.html
+++ b/index-fr.html
@@ -198,7 +198,7 @@
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4>2009-2011</h4>
-                                <h4 class="subheading">Nos humble début</h4>
+                                <h4 class="subheading">Nos humbles débuts</h4>
                             </div>
                             <div class="timeline-body"><p class="text-muted">Nous avons commencé avec une équipe de passioné avec des intérêts commun : qualité et fun</p></div>
                         </div>
@@ -336,7 +336,7 @@
                             <div class="form-group">
                                 <!-- Name input-->
                                 <input class="form-control" id="name" type="text" placeholder="Your Name *" data-sb-validations="required" />
-                                <div class="invalid-feedback" data-sb-feedback="name:required">Un nom ets requis</div>
+                                <div class="invalid-feedback" data-sb-feedback="name:required">Un nom est requis</div>
                             </div>
                             <div class="form-group">
                                 <!-- Email address input-->
