feat(add-the-third-block-with-picture-and-text): add carussel with picture and the text is in french and in english
the indentation is made for the 4 pages modify

--- a/pages/portfolio-grid/portfolio-grid-en.html
+++ b/pages/portfolio-grid/portfolio-grid-en.html
@@ -40,19 +40,19 @@
 		</div>
 		<div class="row justify-content-md-center mb-3">
 			<div class="col-md-auto">
-				<!-- Portfolio item 3-->
-				<div class="portfolio-item">
-					<a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal3">
-						<div class="portfolio-hover">
-							<div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
-						</div>
-						<img class="img-fluid" src="assets/images/img/portfolio/3.jpg" alt="..." />
-					</a>
-					<div class="portfolio-caption">
-						<div class="portfolio-caption-heading">Finish</div>
-						<div class="portfolio-caption-subheading text-muted">Identity</div>
-					</div>
-				</div>
+        <!-- Portfolio item 3-->
+        <div class="portfolio-item">
+          <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal3">
+            <div class="portfolio-hover">
+              <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
+            </div>
+            <img class="img-fluid" src="assets/images/img/portfolio/scgo-project/image-csgo-1.png" alt="..." />
+          </a>
+          <div class="portfolio-caption">
+            <div class="portfolio-caption-heading">Counter-Strike: Global Offensive</div>
+            <div class="portfolio-caption-subheading text-muted">shooting video games</div>
+          </div>
+        </div>
 			</div>
 			<div class="col-md-auto">
 				<!-- Portfolio item 4-->
