fix(fix portfolio): fix grid system
fix grid system and remove pages 5 and 6

BREAKING CHANGE: grid system

--- a/pages/about/about-en.html
+++ b/pages/about/about-en.html
@@ -12,7 +12,7 @@
                       <h4>2009-2011</h4>
                       <h4 class="subheading">Our Humble Beginnings</h4>
                   </div>
-                  <div class="timeline-body"><p class="text-muted">We start with a passionate team with common interest : provide quality and fun.</p></div>
+                  <div class="timeline-body"><p class="text-muted">We start with a passionate team with common interests : provide quality and fun.</p></div>
               </div>
           </li>
           <li class="timeline-inverted">
@@ -32,7 +32,7 @@
                       <h4>December 2015</h4>
                       <h4 class="subheading">Transition to Full Service</h4>
                   </div>
-                  <div class="timeline-body"><p class="text-muted">victim of our success, we're growing</p></div>
+                  <div class="timeline-body"><p class="text-muted">Victim of our success, we're growing</p></div>
               </div>
           </li>
           <li class="timeline-inverted">
@@ -42,7 +42,7 @@
                       <h4>July 2020</h4>
                       <h4 class="subheading">Phase Two Expansion</h4>
                   </div>
-                  <div class="timeline-body"><p class="text-muted">recruiting, training and expanding our target customer base</p></div>
+                  <div class="timeline-body"><p class="text-muted">Recruiting, training and expanding our target customer base</p></div>
               </div>
           </li>
           <li class="timeline-inverted">
