--- a/pages/about/about-fr.html
+++ b/pages/about/about-fr.html
@@ -10,9 +10,9 @@
               <div class="timeline-panel">
                   <div class="timeline-heading">
                       <h4>2009-2011</h4>
-                      <h4 class="subheading">Nos humble début</h4>
+                      <h4 class="subheading">Nos humbles débuts</h4>
                   </div>
-                  <div class="timeline-body"><p class="text-muted">Nous avons commencé avec une équipe de passioné avec des intérêts commun : qualité et fun</p></div>
+                  <div class="timeline-body"><p class="text-muted">Nous avons commencé avec une équipe de passionés avec des intérêts communs : qualité et fun</p></div>
               </div>
           </li>
           <li class="timeline-inverted">
@@ -22,7 +22,7 @@
                       <h4>March 2011</h4>
                       <h4 class="subheading">Une agence est née</h4>
                   </div>
-                  <div class="timeline-body"><p class="text-muted">Après quelques projet, c'est une entreprise qui naît</p></div>
+                  <div class="timeline-body"><p class="text-muted">Après quelques projets, c'est une entreprise qui naît</p></div>
               </div>
           </li>
           <li>
@@ -42,7 +42,7 @@
                       <h4>July 2020</h4>
                       <h4 class="subheading">Phase 2 Expansion</h4>
                   </div>
-                  <div class="timeline-body"><p class="text-muted">Recrutement, formation et croissement de notre clientèle cible.</p></div>
+                  <div class="timeline-body"><p class="text-muted">Recrutement, formation et acroissement de notre clientèle cible.</p></div>
               </div>
           </li>
           <li class="timeline-inverted">
